# paraframework

./: README.md  __init__.py  amp.py  autograd.py  bpe_tokenizer.py  c_bridge.py  cognitive.py  complex.py  data.py  device.py  distiller.py  evolutionary.py  jit.py  maths.py  module.py  numba_ops.py  optim.py  quantization.py  quantum.py  scheduler.py  tensor.py  tokenizer.py
__pycache__/: numba_ops.adam_step_numba-36.py313.1.nbc  numba_ops.adam_step_numba-36.py313.nbi  numba_ops.adam_step_numba-67.py313.1.nbc  numba_ops.adam_step_numba-67.py313.nbi  numba_ops.adam_step_numba-74.py313.1.nbc  numba_ops.adam_step_numba-74.py313.2.nbc  numba_ops.adam_step_numba-74.py313.3.nbc  numba_ops.adam_step_numba-74.py313.4.nbc  numba_ops.adam_step_numba-74.py313.5.nbc  numba_ops.adam_step_numba-74.py313.nbi  numba_ops.adam_step_numba-83.py313.1.nbc  numba_ops.adam_step_numba-83.py313.2.nbc  numba_ops.adam_step_numba-83.py313.3.nbc  numba_ops.adam_step_numba-83.py313.nbi  numba_ops.matmul_numba-18.py313.1.nbc  numba_ops.matmul_numba-18.py313.2.nbc  numba_ops.matmul_numba-18.py313.3.nbc  numba_ops.matmul_numba-18.py313.4.nbc  numba_ops.matmul_numba-18.py313.5.nbc  numba_ops.matmul_numba-18.py313.6.nbc  numba_ops.matmul_numba-18.py313.nbi
cpp_ops/: BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md  fast_ops.cpp  setup.py
doc/: __init__.py.md  amp.py.md  autograd.py.md  bpe_tokenizer.py.md  c_bridge.py.md  cognitive.py.md  complex.py.md  data.py.md  device.py.md  evolutionary.py.md  jit.py.md  maths.py.md  module.py.md  nn_functional.py.md  nn_layers.py.md  nn_loss.py.md  optim.py.md  (+9 more)
(+9 files in other folders)
